RESOLVED FIXED228938
[GTK][WPE] REGRESSION(r280795): MemoryPressureHandlerUnix.cpp:45:28: error: ‘LogMemoryPressure’ was not declared in this scope
https://bugs.webkit.org/show_bug.cgi?id=228938
Summary [GTK][WPE] REGRESSION(r280795): MemoryPressureHandlerUnix.cpp:45:28: error: ‘...
Fujii Hironori
Reported 2021-08-09 18:46:21 PDT
[GTK][WPE] REGRESSION(r280795): MemoryPressureHandlerUnix.cpp:45:28: error: ‘LogMemoryPressure’ was not declared in this scope FAILED: Source/WTF/wtf/CMakeFiles/WTF.dir/unix/MemoryPressureHandlerUnix.cpp.o /usr/bin/ccache /usr/bin/c++ -DBUILDING_GTK__=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WTF -DGETTEXT_PACKAGE=\"WebKit2GTK-4.1\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DSTATICALLY_LINKED_WITH_bmalloc -DWEBKITGTK_API_VERSION_STRING=\"4.1\" -I. -IWTF/DerivedSources -I../../Source/WTF -I../../Source/WTF/wtf -I../../Source/WTF/wtf/dtoa -I../../Source/WTF/wtf/persistence -I../../Source/WTF/wtf/text -I../../Source/WTF/wtf/text/icu -I../../Source/WTF/wtf/threads -I../../Source/WTF/wtf/unicode -Ibmalloc/Headers -isystem /usr/include/gio-unix-2.0 -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -isystem /usr/include/libmount -isystem /usr/include/blkid -fdiagnostics-color=always -Wextra -Wall -Wno-expansion-to-defined -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -gsplit-dwarf -g -fPIC -fvisibility=hidden -std=c++17 -MD -MT Source/WTF/wtf/CMakeFiles/WTF.dir/unix/MemoryPressureHandlerUnix.cpp.o -MF Source/WTF/wtf/CMakeFiles/WTF.dir/unix/MemoryPressureHandlerUnix.cpp.o.d -o Source/WTF/wtf/CMakeFiles/WTF.dir/unix/MemoryPressureHandlerUnix.cpp.o -c ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp In file included from ../../Source/WTF/wtf/StdLibExtras.h:32, from ../../Source/WTF/wtf/FastMalloc.h:26, from ../../Source/WTF/config.h:31, from ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp:28: ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp: In member function ‘void WTF::MemoryPressureHandler::triggerMemoryPressureEvent(bool)’: ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp:45:28: error: ‘LogMemoryPressure’ was not declared in this scope; did you mean ‘isUnderMemoryPressure’? 45 | #define LOG_CHANNEL_PREFIX Log | ^~~ ../../Source/WTF/wtf/Assertions.h:175:63: note: in definition of macro ‘JOIN_LOG_CHANNEL_WITH_PREFIX_LEVEL_2’ 175 | #define JOIN_LOG_CHANNEL_WITH_PREFIX_LEVEL_2(prefix, channel) prefix ## channel | ^~~~~~ ../../Source/WTF/wtf/Assertions.h:172:27: note: in expansion of macro ‘JOIN_LOG_CHANNEL_WITH_PREFIX’ 172 | #define LOG_CHANNEL(name) JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, name) | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:172:56: note: in expansion of macro ‘LOG_CHANNEL_PREFIX’ 172 | #define LOG_CHANNEL(name) JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, name) | ^~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:495:35: note: in expansion of macro ‘LOG_CHANNEL’ 495 | #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) | ^~~~~~~~~~~ ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp:68:9: note: in expansion of macro ‘LOG’ 68 | LOG(MemoryPressure, "Got memory pressure notification (%s)", isCritical ? "critical" : "non-critical"); | ^~~ ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp:45:28: error: ‘LogMemoryPressure’ was not declared in this scope; did you mean ‘isUnderMemoryPressure’? 45 | #define LOG_CHANNEL_PREFIX Log | ^~~ ../../Source/WTF/wtf/Assertions.h:175:63: note: in definition of macro ‘JOIN_LOG_CHANNEL_WITH_PREFIX_LEVEL_2’ 175 | #define JOIN_LOG_CHANNEL_WITH_PREFIX_LEVEL_2(prefix, channel) prefix ## channel | ^~~~~~ ../../Source/WTF/wtf/Assertions.h:172:27: note: in expansion of macro ‘JOIN_LOG_CHANNEL_WITH_PREFIX’ 172 | #define LOG_CHANNEL(name) JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, name) | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:172:56: note: in expansion of macro ‘LOG_CHANNEL_PREFIX’ 172 | #define LOG_CHANNEL(name) JOIN_LOG_CHANNEL_WITH_PREFIX(LOG_CHANNEL_PREFIX, name) | ^~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:495:35: note: in expansion of macro ‘LOG_CHANNEL’ 495 | #define LOG(channel, ...) WTFLog(&LOG_CHANNEL(channel), __VA_ARGS__) | ^~~~~~~~~~~ ../../Source/WTF/wtf/unix/MemoryPressureHandlerUnix.cpp:77:9: note: in expansion of macro ‘LOG’ 77 | LOG(MemoryPressure, "System is no longer under memory pressure."); | ^~~
Attachments
Patch (1.44 KB, patch)
2021-08-09 18:47 PDT, Fujii Hironori
ews-feeder: commit-queue-
Fujii Hironori
Comment 1 2021-08-09 18:47:29 PDT
EWS
Comment 2 2021-08-09 19:30:04 PDT
Committed r280821 (240384@main): <https://commits.webkit.org/240384@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435230 [details].
Radar WebKit Bug Importer
Comment 3 2021-08-09 19:40:21 PDT
Note You need to log in before you can comment on or make changes to this bug.