[GTK][WPE] REGRESSION(r280795): MemoryPressureHandlerUnix.cpp:45:28: error: ‘LogMemoryPressure’ was not declared in this scope https://bugs.webkit.org/show_bug.cgi?id=228938

Unreviewed build fix.


* wtf/unix/MemoryPressureHandlerUnix.cpp:


Canonical link: https://commits.webkit.org/240384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280821 268f45cc-cd09-0410-ab3c-d52691b4dbfc